web: use Bearer auth, move user creation and login to auth.js, add /me
